# streamlining_the_action_dependency_graph_framework

./: .gitignore  LICENSE  README.md  requirements.txt
cpp/: CMakeLists.txt
cpp/scripts/: build.sh
cpp/src/: dependency_creator.cpp
cpp/tests/: test_dependency_creator.cpp  test_python_binding.py
mapf_benchmark/: download_precomputed_solutions.py  parse_map_file.py  parse_precomputed_solutions.py  prepare_benchmark_scenarios.py
src/adg/: adg.py  create_adg.py  dependency_creator_cpp_wrapper.py
src/adg_simulation/: adg_simulation.py  communication.py  shuttle.py  shuttle_supervisor.py
src/common/: action.py  grid_map.py  math_util.py  path_util.py  plotting_common.py  pydantic_util.py  rect_collision.py  resources.py
src/config/: mapf_solution.py  simulation_result_config.py
src/evaluation/: eval_wait_action_removal_on_execution.py  evaluate_adg_construction_benchmark_performance.py  evaluate_adg_construction_performance.py  plot_construction_runtime_line.py  plot_wait_action_removal.py
src/visualize/: pygame_sim_base.py  visualize_adg.py  visualize_mapf_solution.py  visualize_sim_result.py
